<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.xapptree.ginger.SuccessScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                app:lottie_autoPlay="true"
                app:lottie_fileName="loading_check_mark.json" />

            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/success_txt1"
                android:textColor="@color/cardview_dark_background"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/success_txt2"
                android:textColor="@color/blacklight"
                android:textSize="14sp" />

            <Button
                android:id="@+id/orderstate"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_bluish"
                android:elevation="5dp"
                android:inputType="text"
                android:text="@string/view_status"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
