<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="320dp"
        android:layout_height="400dp"
        android:layout_margin="15dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="5dp">

        <RelativeLayout
            android:id="@+id/popup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/elogo"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                app:lottie_autoPlay="true"
                app:lottie_fileName="empty_box.json"
                app:lottie_loop="true" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/elogo"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/your_cart_is_empty"
                android:textColor="@color/blacklight"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt1"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/emptycart_msg"
                android:textColor="@color/cardview_dark_background"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/dialog_bottomlayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/dialog_Done"
                    android:layout_width="120dp"
                    android:layout_height="40dip"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:paddingBottom="8dip"
                    android:paddingTop="8dip"
                    android:text="@string/canceltxt"
                    android:textColor="@color/colorBlue"
                    android:textSize="16dip" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>